changing build script to use the deploy key